(Add Vul: Nginx) Nginx整数溢出漏洞 (CVE-2017-7529)

--- a/_posts/2017-08-13-s_ssh_1.md
+++ b/_posts/2017-08-13-s_ssh_1.md
@@ -8,7 +8,7 @@ main-class: 'hole'
 color: '#B31917'
 tags:
 - SSH
-- RCE
+- Command-Execution
 categories:
 - SSH
 twitter_text: 'SSH 命令注入漏洞(CVE-2017-1000117)环境'
